[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedlistlib"
version = "0.1.0"
description = "A Python package implementing singly, doubly, circular singly, and circular doubly linked lists."
authors = [
  { name = "Aswath", email = "aswathnag.s@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["linked list", "data structures", "python", "sll", "dll", "cll", "dcll"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Development Status :: 3 - Alpha"
]

[project.urls]
"Homepage" = "https://github.com/Aswath220/linkedlistlib"
"Source" = "https://github.com/Aswath220/linkedlistlib"
"Issues" = "https://github.com/Aswath220/linkedlistlib/issues"

[tool.setuptools]
packages = ["linkedlist"]

[tool.setuptools.package-data]

